--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jose's Portfolio</title>
+    <title>Jose Garcia | Portfolio</title>
     <script src="https://kit.fontawesome.com/01313bc1d4.js" crossorigin="anonymous"></script>
   </head>
   <body>
